PartnerDemo/src/objects/Account_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Product</relationshipLabel>
        <relationshipName>Account_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_HomeBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In HomeBanner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recommended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Product</relationshipLabel>
        <relationshipName>Account_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Sold__c</fullName>
        <label>Total Quantity Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_in_Top_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is in Top Sales?</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Product</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Account Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>